# fsopxpy_loc

./: README.md  pyproject.toml
fsopxpy_loc/: locator.py
tests/: test_locator.py
