[tool.poetry]
name = "fsopxpy-loc"
version = "0.1.0"
description = ""
authors = ["Sabine Maennel <sabine.maennel@gmail.com>"]
readme = "README.md"
packages = [{include = "fsopxpy_loc"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
