[tool.poetry]
name = "fsopxpy-loc"
version = "0.1.0"
description = ""
authors = ["Sabine Maennel <sabine.maennel@gmail.com>"]
readme = "README.md"
packages = [{include = "fsopxpy_loc"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
